--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
     <version>1.0-SNAPSHOT</version>
     <name>fhmdb</name>
 
+    <scm>
+        <connection>scm:git:https://github.com/sofakonig/Prog2.git</connection>
+        <developerConnection>scm:git:https://github.com/sofakonig/Prog2.git</developerConnection>
+        <url>https://github.com/sofakonig/Prog2</url>
+        <tag>HEAD</tag>
+    </scm>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.8.2</junit.version>
@@ -97,6 +104,17 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <tagNameFormat>@{project.version}</tagNameFormat>
+                    <updateWorkingCopyVersions>true</updateWorkingCopyVersions>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <pushChanges>true</pushChanges>
+                </configuration>
             </plugin>
         </plugins>
     </build>
